// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Card deprecated: modalBodyClassName: Component: Card => deprecated: modalBodyClassName 1`] = `
<Card
  tag="div"
>
  <CardBody
    className="deprecated classes"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      <ErrorBoundary>
        This is the content
      </ErrorBoundary>
    </Suspense>
  </CardBody>
</Card>
`;

exports[`Component: Card deprecated: modalFooterClassName: Component: Card => deprecated: modalFooterClassName 1`] = `
<Card
  tag="div"
>
  <CardBody
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      <ErrorBoundary>
        This is the content
      </ErrorBoundary>
    </Suspense>
  </CardBody>
  <CardFooter
    className="deprecated classes"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      test
    </Suspense>
  </CardFooter>
</Card>
`;

exports[`Component: Card deprecated: modalHeaderClassName: Component: Card => deprecated: modalHeaderClassName 1`] = `
<Card
  tag="div"
>
  <CardHeader
    className="deprecated classes"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      test
    </Suspense>
  </CardHeader>
  <CardBody
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      <ErrorBoundary>
        This is the content
      </ErrorBoundary>
    </Suspense>
  </CardBody>
</Card>
`;

exports[`Component: Card ui basic: Component: Card => ui => basic 1`] = `
<Card
  tag="div"
>
  <CardHeader
    className="card-header"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      A simple header
    </Suspense>
  </CardHeader>
  <CardBody
    className="card-body"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      <ErrorBoundary>
        <RadioGroup
          labelForOption={[Function]}
          onChange={[MockFunction]}
          options={
            Array [
              "local",
              "development",
              "test",
              "acceptation",
              "production",
            ]
          }
        />
      </ErrorBoundary>
    </Suspense>
  </CardBody>
  <CardFooter
    className="card-footer"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      A simple footer
    </Suspense>
  </CardFooter>
</Card>
`;

exports[`Component: Card ui without footer: Component: Card => ui => without footer 1`] = `
<Card
  tag="div"
>
  <CardHeader
    className="card-header"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      A simple header
    </Suspense>
  </CardHeader>
  <CardBody
    className="card-body"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      <ErrorBoundary>
        <RadioGroup
          labelForOption={[Function]}
          onChange={[MockFunction]}
          options={
            Array [
              "local",
              "development",
              "test",
              "acceptation",
              "production",
            ]
          }
        />
      </ErrorBoundary>
    </Suspense>
  </CardBody>
</Card>
`;

exports[`Component: Card ui without header: Component: Card => ui => without header 1`] = `
<Card
  tag="div"
>
  <CardBody
    className="card-body"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      <ErrorBoundary>
        <RadioGroup
          labelForOption={[Function]}
          onChange={[MockFunction]}
          options={
            Array [
              "local",
              "development",
              "test",
              "acceptation",
              "production",
            ]
          }
        />
      </ErrorBoundary>
    </Suspense>
  </CardBody>
  <CardFooter
    className="card-footer"
    tag="div"
  >
    <Suspense
      fallback={<Loading />}
    >
      A simple footer
    </Suspense>
  </CardFooter>
</Card>
`;
